tests/snapshots/dependency_graph__dependency_graph_of_blinking.snap
---
source: tests/dependency_graph.rs
expression: file
---
typedefs: []
functions: []
nodes:
  - id: counter
    is_component: false
    inputs:
      - - res
        - Boolean
      - - tick
        - Boolean
    unscheduled_equations:
      inc:
        scope: Local
        id: inc
        signal_type: Integer
        expression:
          MapApplication:
            function_expression:
              Call:
                id: if_then_else
                typing:
                  Abstract:
                    - - Boolean
                      - Integer
                      - Integer
                    - Integer
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: tick
                    scope: Input
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - tick
                      - 0
              - Constant:
                  constant:
                    Integer: 1
                  typing: Integer
                  location: ~
                  dependencies: []
              - Constant:
                  constant:
                    Integer: 0
                  typing: Integer
                  location: ~
                  dependencies: []
            typing: Integer
            location: ~
            dependencies:
              - - tick
                - 0
        location: ~
      o:
        scope: Output
        id: o
        signal_type: Integer
        expression:
          MapApplication:
            function_expression:
              Call:
                id: if_then_else
                typing:
                  Abstract:
                    - - Boolean
                      - Integer
                      - Integer
                    - Integer
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: res
                    scope: Input
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - res
                      - 0
              - Constant:
                  constant:
                    Integer: 0
                  typing: Integer
                  location: ~
                  dependencies: []
              - MapApplication:
                  function_expression:
                    Call:
                      id: " + "
                      typing:
                        Abstract:
                          - - Integer
                            - Integer
                          - Integer
                      location: ~
                  inputs:
                    - MapApplication:
                        function_expression:
                          Call:
                            id: (_)
                            typing:
                              Abstract:
                                - - Integer
                                - Integer
                            location: ~
                        inputs:
                          - FollowedBy:
                              constant:
                                Integer: 0
                              expression:
                                SignalCall:
                                  signal:
                                    id: o
                                    scope: Output
                                  typing: Integer
                                  location: ~
                                  dependencies:
                                    - - o
                                      - 0
                              typing: Integer
                              location: ~
                              dependencies:
                                - - o
                                  - 1
                        typing: Integer
                        location: ~
                        dependencies:
                          - - o
                            - 1
                    - SignalCall:
                        signal:
                          id: inc
                          scope: Local
                        typing: Integer
                        location: ~
                        dependencies:
                          - - inc
                            - 0
                  typing: Integer
                  location: ~
                  dependencies:
                    - - o
                      - 1
                    - - inc
                      - 0
            typing: Integer
            location: ~
            dependencies:
              - - res
                - 0
              - - o
                - 1
              - - inc
                - 0
        location: ~
    unitary_nodes: {}
    location: ~
    graph:
      vertices:
        inc:
          id: inc
          value: Black
          neighbors:
            - id: tick
              weight: 0
        o:
          id: o
          value: Black
          neighbors:
            - id: res
              weight: 0
            - id: o
              weight: 1
            - id: inc
              weight: 0
        res:
          id: res
          value: Black
          neighbors: []
        tick:
          id: tick
          value: Black
          neighbors: []
  - id: blinking
    is_component: false
    inputs:
      - - tick_number
        - Integer
    unscheduled_equations:
      counter:
        scope: Local
        id: counter
        signal_type: Integer
        expression:
          NodeApplication:
            node: counter
            inputs:
              - SignalCall:
                  signal:
                    id: res
                    scope: Local
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - res
                      - 0
              - Constant:
                  constant:
                    Boolean: true
                  typing: Boolean
                  location: ~
                  dependencies: []
            signal: o
            typing: Integer
            location: ~
            dependencies:
              - - res
                - 0
              - - res
                - 1
        location: ~
      on_off:
        scope: Local
        id: on_off
        signal_type: Boolean
        expression:
          MapApplication:
            function_expression:
              TypedAbstraction:
                inputs:
                  - - t
                    - Boolean
                  - - b
                    - Boolean
                expression:
                  Application:
                    function_expression:
                      Call:
                        id: if_then_else
                        typing:
                          Abstract:
                            - - Boolean
                              - Boolean
                              - Boolean
                            - Boolean
                        location: ~
                    inputs:
                      - Call:
                          id: t
                          typing: Boolean
                          location: ~
                      - Application:
                          function_expression:
                            Call:
                              id: "!"
                              typing:
                                Abstract:
                                  - - Boolean
                                  - Boolean
                              location: ~
                          inputs:
                            - Call:
                                id: b
                                typing: Boolean
                                location: ~
                          typing: Boolean
                          location: ~
                      - Call:
                          id: b
                          typing: Boolean
                          location: ~
                    typing: Boolean
                    location: ~
                typing:
                  Abstract:
                    - - Boolean
                      - Boolean
                    - Boolean
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: res
                    scope: Local
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - res
                      - 0
              - FollowedBy:
                  constant:
                    Boolean: true
                  expression:
                    SignalCall:
                      signal:
                        id: on_off
                        scope: Local
                      typing: Boolean
                      location: ~
                      dependencies:
                        - - on_off
                          - 0
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - on_off
                      - 1
            typing: Boolean
            location: ~
            dependencies:
              - - res
                - 0
              - - on_off
                - 1
        location: ~
      res:
        scope: Local
        id: res
        signal_type: Boolean
        expression:
          FollowedBy:
            constant:
              Boolean: true
            expression:
              MapApplication:
                function_expression:
                  Call:
                    id: (_)
                    typing:
                      Abstract:
                        - - Boolean
                        - Boolean
                    location: ~
                inputs:
                  - MapApplication:
                      function_expression:
                        Call:
                          id: " == "
                          typing:
                            Abstract:
                              - - Integer
                                - Integer
                              - Boolean
                          location: ~
                      inputs:
                        - MapApplication:
                            function_expression:
                              Call:
                                id: " + "
                                typing:
                                  Abstract:
                                    - - Integer
                                      - Integer
                                    - Integer
                                location: ~
                            inputs:
                              - SignalCall:
                                  signal:
                                    id: counter
                                    scope: Local
                                  typing: Integer
                                  location: ~
                                  dependencies:
                                    - - counter
                                      - 0
                              - Constant:
                                  constant:
                                    Integer: 1
                                  typing: Integer
                                  location: ~
                                  dependencies: []
                            typing: Integer
                            location: ~
                            dependencies:
                              - - counter
                                - 0
                        - SignalCall:
                            signal:
                              id: tick_number
                              scope: Input
                            typing: Integer
                            location: ~
                            dependencies:
                              - - tick_number
                                - 0
                      typing: Boolean
                      location: ~
                      dependencies:
                        - - counter
                          - 0
                        - - tick_number
                          - 0
                typing: Boolean
                location: ~
                dependencies:
                  - - counter
                    - 0
                  - - tick_number
                    - 0
            typing: Boolean
            location: ~
            dependencies:
              - - counter
                - 1
              - - tick_number
                - 1
        location: ~
      status:
        scope: Output
        id: status
        signal_type: Integer
        expression:
          MapApplication:
            function_expression:
              Call:
                id: if_then_else
                typing:
                  Abstract:
                    - - Boolean
                      - Integer
                      - Integer
                    - Integer
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: on_off
                    scope: Local
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - on_off
                      - 0
              - MapApplication:
                  function_expression:
                    Call:
                      id: " + "
                      typing:
                        Abstract:
                          - - Integer
                            - Integer
                          - Integer
                      location: ~
                  inputs:
                    - SignalCall:
                        signal:
                          id: counter
                          scope: Local
                        typing: Integer
                        location: ~
                        dependencies:
                          - - counter
                            - 0
                    - Constant:
                        constant:
                          Integer: 1
                        typing: Integer
                        location: ~
                        dependencies: []
                  typing: Integer
                  location: ~
                  dependencies:
                    - - counter
                      - 0
              - Constant:
                  constant:
                    Integer: 0
                  typing: Integer
                  location: ~
                  dependencies: []
            typing: Integer
            location: ~
            dependencies:
              - - on_off
                - 0
              - - counter
                - 0
        location: ~
    unitary_nodes: {}
    location: ~
    graph:
      vertices:
        counter:
          id: counter
          value: Black
          neighbors:
            - id: res
              weight: 0
            - id: res
              weight: 1
        on_off:
          id: on_off
          value: Black
          neighbors:
            - id: res
              weight: 0
            - id: on_off
              weight: 1
        res:
          id: res
          value: Black
          neighbors:
            - id: counter
              weight: 1
            - id: tick_number
              weight: 1
        status:
          id: status
          value: Black
          neighbors:
            - id: on_off
              weight: 0
            - id: counter
              weight: 0
        tick_number:
          id: tick_number
          value: Black
          neighbors: []
component: ~
location: ~

