tests/snapshots/dependency_graph__dependency_graph_of_counter.snap
---
source: tests/dependency_graph.rs
expression: file
---
typedefs: []
functions: []
nodes:
  - id: counter
    is_component: false
    inputs:
      - - res
        - Boolean
      - - tick
        - Boolean
    unscheduled_equations:
      inc:
        scope: Local
        id: inc
        signal_type: Integer
        expression:
          FunctionApplication:
            function_expression:
              Identifier:
                id: if_then_else
                typing:
                  Abstract:
                    - - Boolean
                      - Integer
                      - Integer
                    - Integer
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: tick
                    scope: Input
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - tick
                      - 0
              - Constant:
                  constant:
                    Integer: 1
                  typing: Integer
                  location: ~
                  dependencies: []
              - Constant:
                  constant:
                    Integer: 0
                  typing: Integer
                  location: ~
                  dependencies: []
            typing: Integer
            location: ~
            dependencies:
              - - tick
                - 0
        location: ~
      o:
        scope: Output
        id: o
        signal_type: Integer
        expression:
          FunctionApplication:
            function_expression:
              Identifier:
                id: if_then_else
                typing:
                  Abstract:
                    - - Boolean
                      - Integer
                      - Integer
                    - Integer
                location: ~
            inputs:
              - SignalCall:
                  signal:
                    id: res
                    scope: Input
                  typing: Boolean
                  location: ~
                  dependencies:
                    - - res
                      - 0
              - Constant:
                  constant:
                    Integer: 0
                  typing: Integer
                  location: ~
                  dependencies: []
              - FunctionApplication:
                  function_expression:
                    Identifier:
                      id: " + "
                      typing:
                        Abstract:
                          - - Integer
                            - Integer
                          - Integer
                      location: ~
                  inputs:
                    - FunctionApplication:
                        function_expression:
                          Identifier:
                            id: (_)
                            typing:
                              Abstract:
                                - - Integer
                                - Integer
                            location: ~
                        inputs:
                          - FollowedBy:
                              constant:
                                Integer: 0
                              expression:
                                SignalCall:
                                  signal:
                                    id: o
                                    scope: Output
                                  typing: Integer
                                  location: ~
                                  dependencies:
                                    - - o
                                      - 0
                              typing: Integer
                              location: ~
                              dependencies:
                                - - o
                                  - 1
                        typing: Integer
                        location: ~
                        dependencies:
                          - - o
                            - 1
                    - SignalCall:
                        signal:
                          id: inc
                          scope: Local
                        typing: Integer
                        location: ~
                        dependencies:
                          - - inc
                            - 0
                  typing: Integer
                  location: ~
                  dependencies:
                    - - o
                      - 1
                    - - inc
                      - 0
            typing: Integer
            location: ~
            dependencies:
              - - res
                - 0
              - - o
                - 1
              - - inc
                - 0
        location: ~
    unitary_nodes: {}
    contract:
      requires: []
      ensures: []
      invariant: []
      assert: []
    location: ~
    graph:
      vertices:
        inc:
          id: inc
          value: Black
          neighbors:
            - id: tick
              label:
                Weight: 0
        o:
          id: o
          value: Black
          neighbors:
            - id: res
              label:
                Weight: 0
            - id: o
              label:
                Weight: 1
            - id: inc
              label:
                Weight: 0
        res:
          id: res
          value: Black
          neighbors: []
        tick:
          id: tick
          value: Black
          neighbors: []
component:
  id: main
  is_component: true
  inputs: []
  unscheduled_equations:
    half:
      scope: Local
      id: half
      signal_type: Boolean
      expression:
        FollowedBy:
          constant:
            Boolean: true
          expression:
            FunctionApplication:
              function_expression:
                Identifier:
                  id: "!"
                  typing:
                    Abstract:
                      - - Boolean
                      - Boolean
                  location: ~
              inputs:
                - SignalCall:
                    signal:
                      id: half
                      scope: Local
                    typing: Boolean
                    location: ~
                    dependencies:
                      - - half
                        - 0
              typing: Boolean
              location: ~
              dependencies:
                - - half
                  - 0
          typing: Boolean
          location: ~
          dependencies:
            - - half
              - 1
      location: ~
    y:
      scope: Output
      id: y
      signal_type: Integer
      expression:
        NodeApplication:
          node: counter
          inputs:
            - FollowedBy:
                constant:
                  Boolean: false
                expression:
                  FunctionApplication:
                    function_expression:
                      Identifier:
                        id: (_)
                        typing:
                          Abstract:
                            - - Boolean
                            - Boolean
                        location: ~
                    inputs:
                      - FunctionApplication:
                          function_expression:
                            Identifier:
                              id: " > "
                              typing:
                                Abstract:
                                  - - Integer
                                    - Integer
                                  - Boolean
                              location: ~
                          inputs:
                            - SignalCall:
                                signal:
                                  id: y
                                  scope: Output
                                typing: Integer
                                location: ~
                                dependencies:
                                  - - y
                                    - 0
                            - Constant:
                                constant:
                                  Integer: 35
                                typing: Integer
                                location: ~
                                dependencies: []
                          typing: Boolean
                          location: ~
                          dependencies:
                            - - y
                              - 0
                    typing: Boolean
                    location: ~
                    dependencies:
                      - - y
                        - 0
                typing: Boolean
                location: ~
                dependencies:
                  - - y
                    - 1
            - SignalCall:
                signal:
                  id: half
                  scope: Local
                typing: Boolean
                location: ~
                dependencies:
                  - - half
                    - 0
          signal: o
          typing: Integer
          location: ~
          dependencies:
            - - y
              - 1
            - - y
              - 2
            - - half
              - 0
      location: ~
  unitary_nodes: {}
  contract:
    requires: []
    ensures: []
    invariant: []
    assert: []
  location: ~
  graph:
    vertices:
      half:
        id: half
        value: Black
        neighbors:
          - id: half
            label:
              Weight: 1
      y:
        id: y
        value: Black
        neighbors:
          - id: y
            label:
              Weight: 1
          - id: y
            label:
              Weight: 2
          - id: half
            label:
              Weight: 0
location: ~

